# Cubify

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
include/: BlockType.hpp  Camera.hpp  Chunk.hpp  Game.hpp  Shader.hpp  Texture.hpp  World.hpp
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: Camera.cpp  Chunk.cpp  Game.cpp  Shader.cpp  Texture.cpp  World.cpp  main.cpp
